Fix css alignment in home nav buttons.

--- a/app/assets/stylesheets/homepage/homepage.css
+++ b/app/assets/stylesheets/homepage/homepage.css
@@ -64,7 +64,8 @@
   height: 40px;
   
   display: flex;
-  align-content: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .home-button {
